Feb 04 2004  3.1.0  Merged more diffs from Pedro to fix the stackprot alerts on
                     OpenBSD
                    Changed framework of unmonitor support.  This breaks some 
                     things right now, this sync only temporary.  Expect a 
                     fully fixed devel sync later this afternoon.
                    Added unmonitor support for HostAP, fixed broken stuff from
                     earlier.
                    Added unmonitor support for prism54
                    Added smarter output on termination, tied to unmonitor
                    Removed zeroing IPs from interfaces going into rfmon.  This
                     places the onus on the drivers to Do The Right Thing, but
                     makes my life a lot easier for restoring card states.
                    Added unmonitor support for orinoco, acx100
                    Revamped ifconfig internals to only process flags
                    Removed stub, broken unmonitor from wlanng sources
Feb 02 2004  3.1.0  Tweaked probe req handling to assign to_ds
                    Changed panels channel display to show --- for uncontrolled
                     source channels
Feb 01 2004  3.1.0  Fixed broken channel stuff in wlanng to use stored last
                     channel if wext isn't available.
                    Added source picking window for channel locking on multiple
                     sources
                    Added smarter channel hopping setup, added server hopping
                     status to KISMET protocol
Jan 31 2004  3.1.0  wlanng no longer depends on wireless extentions
Jan 28 2004  3.1.0  Panels client now scrolls to next network after tagging
                    Fixed changelog dates (Thanks Alexander...)
                    Added a dirty flag to tcpclient networks listing to save
                     on CPU usage when the network list isn't actually changing
                    Improved use of the dirty flag to conserve cpu