@@ -1,3 +1,4 @@
+Feb 06 2004  3.1.0  Added warning for unmonitor mode
 Feb 04 2004  3.1.0  Merged more diffs from Pedro to fix the stackprot alerts on
                      OpenBSD
                     Changed framework of unmonitor support.  This breaks some 
